# Image-Inpainting-with-Basic-Convolutional-Networks

./: README.md  create_output_per_epoch_animated_result.ipynb  environment.yaml  pyproject.toml  requirements.txt  tensorboard.ipynb  train_image_net_128.ipynb  train_image_net_128_100_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_200_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_500_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_batch_128.ipynb  train_image_net_128_batch_512.ipynb  train_image_net_64.ipynb  train_image_net_64_batch_512.ipynb  train_tiny_image_net.ipynb  train_tiny_image_net_100_factor_losses_coefficients.ipynb  train_tiny_image_net_100_factor_losses_coefficients_batch_64.ipynb  train_tiny_image_net_10_factor_losses_coefficients.ipynb  train_tiny_image_net_batch_128.ipynb  train_tiny_image_net_batch_64.ipynb  train_tiny_image_net_same_losses_coefficients.ipynb  train_tiny_image_net_same_losses_coefficients_batch_64.ipynb
notebooks/: create_output_per_epoch_animated_result.ipynb  tensorboard.ipynb  train_image_net_128_100_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_200_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_500_factor_losses_coefficients_batch_512.ipynb  train_image_net_128_batch_512.ipynb  train_image_net_64_batch_512.ipynb  train_tiny_image_net_100_factor_losses_coefficients_batch_64.ipynb  train_tiny_image_net_batch_64.ipynb  train_tiny_image_net_same_losses_coefficients_batch_64.ipynb
src/: AddCenterSquareTransform.py  TinyImageNetDataset.py  loss.py  (+5 more)
(+42 files in other folders)
